# HPCC-Platform

./: .gitmodules  404.html  BUILD_ME.html  CMakeLists.txt  README.html  hashmap.json  index.html  vcpkg.json  vcpkg.json.in  version.cmake
assets/: BUILD_ME.md.23EahhKk.js  BUILD_ME.md.23EahhKk.lean.js  BUILD_ME.md.BLY4yZw7.js  BUILD_ME.md.BLY4yZw7.lean.js  BUILD_ME.md.DYtPliBU.js  BUILD_ME.md.DYtPliBU.lean.js  BUILD_ME.md.Ot4iypsx.js  BUILD_ME.md.Ot4iypsx.lean.js  README.md.B30is80R.js  README.md.B30is80R.lean.js  README.md.B7o-UNTF.js  README.md.B7o-UNTF.lean.js  README.md.DmaR0GuX.js  README.md.DmaR0GuX.lean.js  README.md.DwKGbsog.js  README.md.DwKGbsog.lean.js  app.CH_s97s4.js  app.DF1lww_w.js  app.StEohGis.js  app.U-bG48Qd.js  build_utils_builds_file_transfer_README.md.Crpp580h.js  build_utils_builds_file_transfer_README.md.Crpp580h.lean.js  build_utils_builds_file_transfer_README.md.DgsW_25L.js  build_utils_builds_file_transfer_README.md.DgsW_25L.lean.js  build_utils_builds_file_transfer_README.md.FNzuBFY2.js  build_utils_builds_file_transfer_README.md.FNzuBFY2.lean.js  build_utils_builds_file_transfer_README.md.Q58aVEHS.js  build_utils_builds_file_transfer_README.md.Q58aVEHS.lean.js  cmake_modules_DOCUMENTATION.md.BfKS2yiV.js  cmake_modules_DOCUMENTATION.md.BfKS2yiV.lean.js  cmake_modules_DOCUMENTATION.md.CnYOpe33.js  cmake_modules_DOCUMENTATION.md.CnYOpe33.lean.js  cmake_modules_DOCUMENTATION.md.DARe7FzS.js  cmake_modules_DOCUMENTATION.md.DARe7FzS.lean.js  cmake_modules_DOCUMENTATION.md.dqGbiXFv.js  cmake_modules_DOCUMENTATION.md.dqGbiXFv.lean.js  common_eventconsumption_README.md.B3Nx97X7.js  common_eventconsumption_README.md.B3Nx97X7.lean.js  common_eventconsumption_README.md.CnL_iInl.js  common_eventconsumption_README.md.CnL_iInl.lean.js  (+1480 more)
cmake_modules/: DOCUMENTATION.html  commonSetup.cmake  options.cmake
devdoc/: BuildWorkflows.html  CodeGenerator.html  CodeReviews.html  CodeSubmissions.html  DevDocs.html  DevTestWithLDAP.html  DeveloperDocs.html  Development.html  ESDLFunctions.html  EndUsers.html  GitAuthenticate.html  LDAPSecurityManager.html  MemoryManager.html  Metrics.html  NewFileProcessing.html  Operations.html  OptimizingRoxieQueryPerformance.html  QAUsers.html  README.html  Remote File Roxie.html  SecurityConfig.html  SecurityUserAuthentication.html  StyleGuide.html  TestWorkflows.html  UserBuildAssets.html  VersionSupport.html  Workunits.html  dali.html  helmReadmes.html  indexformats.html  newActivity.html  (+1 more)
tools/testsocket/: CMakeLists.txt  testsocket.cpp
(+363 files in other folders)
